css creado para dar estilos y poner formas

--- a/principal.html
+++ b/principal.html
@@ -15,11 +15,12 @@
 
   </head>
   <body>
-
-    <div class="slider">
-      <div><center><img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\sudadera.jfif"></center></div>
-      <div><center><img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\tenis.jfif"></center></div>
-      <div><center><img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\mochila.jfif"></center></div>
+    <div class="sliderC">
+        <div class="slider">
+        <img src="/img/m.jpg" alt="pa">
+        <img src="/img/tenis.jpg" alt="pa">
+        <img src="/img/mochila.jpg" alt="pa">
+        </div>
     </div>
 
     <center>
