--- a/principal.html
+++ b/principal.html
@@ -17,7 +17,7 @@
   <body>
     <div class="sliderC">
         <div class="slider">
-        <img src="/img/m.jpg" alt="pa">
+        <img src="/img/sudadera.jpg" alt="pa">
         <img src="/img/tenis.jpg" alt="pa">
         <img src="/img/mochila.jpg" alt="pa">
         </div>
