--- a/principal.html
+++ b/principal.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <link rel="shortcut icon" type="image/x-icon" href="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\Logo.ico"/favicon.ico">
-
+    <title>Gucci</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+    <link rel="stylesheet" href="principal.css">
+    <link rel="stylesheet" href="JavaS.js">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 
@@ -13,21 +15,69 @@
       });
     </script>
 
+    <center><h1>Gucci</h1></center>
+
   </head>
   <body>
-    <div class="sliderC">
+
+    <center>
+      <div class="menu">
+        <ul>
+          <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Nosotros.html">Nosotros</a></li>
+          <li><a href="#">Contacto</a></li>
+          <li><a href="#">????</a></li>
+        </ul>
+      </div>
+    </center>
+
+    <br>
+    <center>
+      <div class="sliderP">
         <div class="slider">
-        <img src="/img/sudadera.jpg" alt="pa">
-        <img src="/img/tenis.jpg" alt="pa">
-        <img src="/img/mochila.jpg" alt="pa">
+        <img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\mochila.avif" alt="pa">
+        <img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\sudadera.avif" alt="pa">
+        <img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\tenis.avif" alt="pa">
         </div>
     </div>
+    </center>
 
+    <p id="fechaHora"></p>
+
+    <div class="FyH">
+      <script>
+        var fechaHoraActual = new Date().toLocaleString();
+        document.getElementById("fechaHora").innerHTML = fechaHoraActual;
+      </script>
+    </div>
+
+    <div class="formulario">
+      <h1>Iniciar sesión</h1>
+      <form action="login.php" method="post">
+        Nombre de usuario: <input type="text" name="username"><br><br>
+        Contraseña: <input type="password" name="password"><br><br>
+        <center><input type="submit" value="Iniciar sesión"></center>
+        <br>
+        <center><div class="recordar">¿Olvido su Contraseña?</div></center>
+        <center><input type="submit" value="Reiniciar Contraseña"></center>
+        <br>
+        <div class="registrarse">
+          Quiero hacer el <a href="https://es.wikipedia.org/wiki/Registro_(base_de_datos)">registro</a>
+        </div>
+      </form>
+    </div>
     <center>
         <section class="mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3732.9142148218357!2d-100.4380605857265!3d20.673068786192164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d35b178c8c0153%3A0x3cc73728d9ec7421!2sGucci%20El%20Palacio%20de%20Hierro!5e0!3m2!1sen!2smx!4v1678401600492!5m2!1sen!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </center>
-
+    <div class="footer">
+      <button><a href="#header">Subir</a></button>
+    </div>
+    <script>
+      const button = document.querySelector("button");
+      button.addEventListener("click", () => {
+        window.scrollTo({ top: 0, behavior: "smooth" });
+      });
+    </script>
   </body>
 </html>
