nosotros y contacto creados

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -2,7 +2,7 @@
 <html>
     <head>
     <link rel="shortcut icon" type="image/x-icon" href="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\Logo.ico"/favicon.ico">
-    <title>Gucci</title>
+    <title>Nosotros</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link rel="stylesheet" href="principal.css">
     <link rel="stylesheet" href="JavaS.js">
