--- a/principal.html
+++ b/principal.html
@@ -24,7 +24,7 @@
       <div class="menu">
         <ul>
           <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Nosotros.html">Nosotros</a></li>
-          <li><a href="#">Contacto</a></li>
+          <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Contacto.html">Contacto</a></li>
           <li><a href="#">????</a></li>
         </ul>
       </div>
@@ -50,6 +50,7 @@
       </script>
     </div>
 
+    </div>
     <center>
         <section class="mapa">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3732.9142148218357!2d-100.4380605857265!3d20.673068786192164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d35b178c8c0153%3A0x3cc73728d9ec7421!2sGucci%20El%20Palacio%20de%20Hierro!5e0!3m2!1sen!2smx!4v1678401600492!5m2!1sen!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
