--- a/Nosotros.html
+++ b/Nosotros.html
@@ -16,13 +16,13 @@
           </div>
 
           <div class="luis">
-            <h1>Mariano Centeno Pérez</h1>
+            <h1>Luis Alberto Gutierrez Jauregui</h1>
             <b>Hola me llamo Mariano Centeno Pérez y soy de Querétaro, tengo 21 años, me gusta tocar la guitarra, el futbol y los videojuegos y sobre todo la materia de programacion para internet</b>
           </div>
 
           <div class="anya">
-            <h1>Mariano Centeno Pérez</h1>
-            <b>Hola me llamo Mariano Centeno Pérez y soy de Querétaro, tengo 21 años, me gusta tocar la guitarra, el futbol y los videojuegos y sobre todo la materia de programacion para internet</b>
+            <h1>Anya Tamara Reyes Galindo</h1>
+            <b>Hola mi nombre es Anya Tamara Reyes Galindo, nací en León pero he vivido casi toda mi vida en Querétaro, hablo 3 idiomas, soy representativo de la Anahuac y selección nacional universitaria en la disciplina de Tiro con Arco, tengo un perrito shih tzu que se llama Aoki, me gustan los videojuegos, deportes, la música, viajar, pero sobre todo la materia de programación. :)</b>
           </div>
     </body>
 </html>
