--- a/principal.html
+++ b/principal.html
@@ -25,7 +25,7 @@
         <ul>
           <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Nosotros.html">Nosotros</a></li>
           <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Contacto.html">Contacto</a></li>
-          <li><a href="#">????</a></li>
+          <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Horarios.html">Horarios</a></li>
         </ul>
       </div>
     </center>
@@ -37,18 +37,10 @@
         <img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\mochila.avif" alt="pa">
         <img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\sudadera.avif" alt="pa">
         <img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\tenis.avif" alt="pa">
+        <img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\tenisN.avif" alt="pa">
         </div>
     </div>
-    </center>
-
-    <p id="fechaHora"></p>
-
-    <div class="FyH">
-      <script>
-        var fechaHoraActual = new Date().toLocaleString();
-        document.getElementById("fechaHora").innerHTML = fechaHoraActual;
-      </script>
-    </div>
+    </center>    
 
     </div>
     <center>
@@ -65,5 +57,17 @@
         window.scrollTo({ top: 0, behavior: "smooth" });
       });
     </script>
+
+<div class="FH">
+  <p id="fechaHora"></p>
+
+<div class="FyH">
+  <script>
+    var fechaHoraActual = new Date().toLocaleString();
+    document.getElementById("fechaHora").innerHTML = fechaHoraActual;
+  </script>
+</div>
+</div>
+
   </body>
 </html>
