Luis Nosotros Terminado

--- a/Nosotros.html
+++ b/Nosotros.html
@@ -17,7 +17,7 @@
 
           <div class="luis">
             <h1>Luis Alberto Gutierrez Jauregui</h1>
-            <b>Hola me llamo Mariano Centeno Pérez y soy de Querétaro, tengo 21 años, me gusta tocar la guitarra, el futbol y los videojuegos y sobre todo la materia de programacion para internet</b>
+            <b>Hola, mi nombre es Luis Alberto Gutiérrez Jáuregui,  soy de león, practiqué remo por 5 años, estudio ingeniería informática y me gustan los videojuegos y  sobre todo la materia de programación para internet.</b>
           </div>
 
           <div class="anya">
