--- a/principal.html
+++ b/principal.html
@@ -16,7 +16,7 @@
     </script>
 
    <div class="encabezado">
-    <center><h1>Gucci</h1></center>
+    <center><img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\gucci.png" width="400"></center>
    </div>
 
   </head>
