--- a/principal.html
+++ b/principal.html
@@ -15,14 +15,13 @@
       });
     </script>
 
-   <div class="encabezado">
-    <center><img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\gucci.png" width="400"></center>
-   </div>
-
-  </head>
-  <body>
-
-    <center>
+                      
+    <header>
+        <div>
+            <!--primera imagen de la págia como encabezado-->
+            <center><img src="="400"></center>
+        </div>
+          <center>
       <div class="menu">
         <ul>
           <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Nosotros.html">Nosotros</a></li>
@@ -31,6 +30,12 @@
         </ul>
       </div>
     </center>
+    </header>
+
+  </head>
+  <body>
+
+
 
     <br>
     <center>
