--- a/principal.html
+++ b/principal.html
@@ -19,7 +19,7 @@
     <header>
         <div>
             <!--primera imagen de la págia como encabezado-->
-            <center><img src="="400"></center>
+            <center><img src="gucci.png" width="400"></center>
         </div>
           <center>
       <div class="menu">
