--- a/principal.html
+++ b/principal.html
@@ -15,22 +15,27 @@
       });
     </script>
 
-   <div class="encabezado">
-    <center><img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\gucci.png" width="400"></center>
-   </div>
-
   </head>
   <body>
 
-    <center>
-      <div class="menu">
-        <ul>
-          <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Nosotros.html">Nosotros</a></li>
-          <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Contacto.html">Contacto</a></li>
-          <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Horarios.html">Horarios</a></li>
-        </ul>
+    <header>
+      <div>
+          <!--primera imagen de la págia como encabezado-->
+          <center><img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\gucci.png" width="400"></center>
       </div>
-    </center>
+        <center>
+    <div class="menu">
+      <ul>
+        <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Nosotros.html">Nosotros</a></li>
+        <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Contacto.html">Contacto</a></li>
+        <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Horarios.html">Horarios</a></li>
+      </ul>
+    </div>
+        </center>
+    </header>
+  </center>
+
+  </header>
 
     <br>
     <center>
