--- a/principal.html
+++ b/principal.html
@@ -21,7 +21,7 @@
     <header>
       <div>
           <!--primera imagen de la págia como encabezado-->
-          <img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\gucci.png" width="400">
+          <center><img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\gucci.png" width="400"></center>
       </div>
         <center>
     <div class="menu">
