--- a/principal.html
+++ b/principal.html
@@ -23,15 +23,15 @@
           <!--primera imagen de la págia como encabezado-->
           <center><img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\gucci.png" width="400"></center>
       </div>
+       <nav>
         <center>
-    <div class="menu">
-      <ul>
-        <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Nosotros.html">Nosotros</a></li>
-        <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Contacto.html">Contacto</a></li>
-        <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Horarios.html">Horarios</a></li>
-      </ul>
-    </div>
+          <ul>
+            <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Nosotros.html">Nosotros</a></li>
+            <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Contacto.html">Contacto</a></li>
+            <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Horarios.html">Horarios</a></li>
+          </ul>
         </center>
+       </nav>
     </header>
   </center>
 
@@ -66,8 +66,8 @@
     </script>
 
 <div class="FH">
+  <h1>Fecha y Hora</h1>
   <p id="fechaHora"></p>
-
 <div class="FyH">
   <script>
     var fechaHoraActual = new Date().toLocaleString();
