--- a/Nosotros.html
+++ b/Nosotros.html
@@ -10,6 +10,23 @@
     <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     </head>
     <body>
+      
+      <header>
+        <div>
+            <!--primera imagen de la págia como encabezado-->
+            <center><img src="C:\Users\brute\OneDrive\Documents\ProyectoPrograInternet\img\gucci.png" width="400"></center>
+        </div>
+         <nav>
+          <center>
+            <ul>
+              <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/principal.html">Inicio</a></li>
+              <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Contacto.html">Contacto</a></li>
+              <li><a href="file:///C:/Users/brute/OneDrive/Documents/ProyectoPrograInternet/Horarios.html">Horarios</a></li>
+            </ul>
+          </center>
+         </nav>
+      </header>
+
         <div class="mariano">
             <h1>Mariano Centeno Pérez</h1>
             <b>Hola me llamo Mariano Centeno Pérez y soy de Querétaro, tengo 21 años, me gusta tocar la guitarra, el futbol y los videojuegos y sobre todo la materia de programacion para internet</b>
